[package]
name = "pcfe"
version = "0.1.0"
authors = ["John <git@r3ndom.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
sleighcraft = { path = "../sleighcraft/sleighcraft" }
#git = "https://github.com/StarCrossPortal/sleighcraft" }
log = { version = "0.4", features = ["std"] }
simplelog = "^0.10.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"] }
bitflags = "1.2.1"

